third_party/move/move-compiler-v2/tests/checking-lang-v2.2/acquires/acquires_error.exp

Diagnostics:
error: missing acquires annotation for `R`
   ┌─ tests/checking-lang-v2.2/acquires/acquires_error.move:14:9
   │
14 │     fun read(a: address): u64 acquires S {
   │         ^^^^
15 │         let r = borrow_global<R>(a);
   │                 ------------------- acquired here
   │
   = since Move 2.2, `acquires` is inferred by the compiler and can be omitted from the function declaration.

error: unnecessary acquires annotation
   ┌─ tests/checking-lang-v2.2/acquires/acquires_error.move:14:40
   │
14 │     fun read(a: address): u64 acquires S {
   │                                        ^^
